(fix) Remove horizontal scroll bar on main page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,7 @@
 /*Create PPT*/
 body {
   background-color: #ffffff;
+  overflow-x: hidden;
 }
 .row{
   display: flex;
